Fix posts form not showing existing tag suggestions

--- a/app/assets/stylesheets/integral/backend/shared.sass
+++ b/app/assets/stylesheets/integral/backend/shared.sass
@@ -846,6 +846,7 @@ table
   > .input, > .image-select
     @include card-container($card-background, $card-font-color, $card-margin-bottom, $card-border, $card-border-radius, $card-shadow)
     @include card-section
+    overflow: initial
 
 .card
   @include card-section
